-
Bug
-
Resolution: Fixed
-
Major
-
Upstream
-
3
-
9223372036854775807
Trying to create a file after setting up changelogs on a fresh new FS yields an IO error:
# lustre/tests/llmount.sh (...) # lctl set_param mdd.*.changelog_mask=MTIME mdd.lustre-MDT0000.changelog_mask=MTIME # lctl --device lustre-MDT0000 changelog_register lustre-MDT0000: Registered changelog userid 'cl1' #touch /mnt/lustre/file touch: setting times of '/mnt/lustre/file': Input/output error
dmesg provides some interesting information:
# dmesg -H | tail -n 3 [Aug 5 11:23] Lustre: lustre-MDD0000: changelog on [Aug 5 11:25] LustreError: 23303:0:(llog_cat.c:544:llog_cat_current_log()) lustre-MDD0000: next log does not exist! [ +0.003231] LustreError: 24631:0:(llite_lib.c:1707:ll_md_setattr()) md_setattr fails: rc = -5
Happy hunting ![]()