LU-13854 mdd: setattr can use multiple chglog types

we need to declare a new record to the changelog if any of
possible record type is expected.
also check for changelog at declaration only as changelog
can get enabled between declaration and executiong.

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: Ica1c8774989a30d3282a43b5767fc2e56d82d521
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58681
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alexander Zarochentsev <alexander.zarochentsev@hpe.com>
Reviewed-by: Alexander Boyko <alexander.boyko@hpe.com>